--- a/client/main.html
+++ b/client/main.html
@@ -1,25 +1,20 @@
+ <!-- The main html page will be our main app template. -->
 <head>
-  <title>discoverMeteor</title>
+  <title>Meteor Application</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+  <div class="container">
+     <header class="navbar navbar-default" role="navigation">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">Discover Meteor</a>
+      </div>
+    </header>
 
-  {{> hello}}
-  {{> info}}
+    <div id="main">
+      <!-- Includes a Template from another place -->
+       {{> postsList}}
+    </div>
+
+  </div>
 </body>
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
-
-<template name="info">
-  <h2>Learn Meteor!</h2>
-  <ul>
-    <li><a href="https://www.meteor.com/try" target="_blank">Do the Tutorial</a></li>
-    <li><a href="http://guide.meteor.com" target="_blank">Follow the Guide</a></li>
-    <li><a href="https://docs.meteor.com" target="_blank">Read the Docs</a></li>
-    <li><a href="https://forums.meteor.com" target="_blank">Discussions</a></li>
-  </ul>
-</template>
